Sugati/src/objects/Travelling_Country__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <formula>TC_Country__r.Name</formula>
        <label>Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(TC_Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Accommodation_Region__c</fullName>
        <label>Accommodation/Region</label>
        <picklist>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TC_Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Travelling Countries</relationshipLabel>
        <relationshipName>Travelling_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TC_Cover_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cover Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TC_DestinationMap_Image_ID__c</fullName>
        <label>DestinationMap Image ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Exchange_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Travelling Countries</relationshipLabel>
        <relationshipName>Travelling_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TC_ImageID__c</fullName>
        <label>ImageID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Travelling Countries</relationshipLabel>
        <relationshipName>Travelling_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TC_Selected__c</fullName>
        <inlineHelpText>When was the cover selected?</inlineHelpText>
        <label>Selected</label>
        <type>DateTime</type>
    </fields>
    <label>Travelling Country</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Travelling Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travelling Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>